--- a/gradle.properties
+++ b/gradle.properties
@@ -42,18 +42,27 @@ mapping_version=1.20.1
 
 # The unique mod identifier for the mod. Must be lowercase in English locale. Must fit the regex [a-z][a-z0-9_]{1,63}
 # Must match the String constant located in the main mod class annotated with @Mod.
-mod_id=create-adventuring
+mod_id=create_adventuring
 # The human-readable display name for the mod.
 mod_name=Create: Adventuring
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
-mod_license=MIT License
+mod_license=MIT
 # The mod version. See https://semver.org/
 mod_version=0.0.1
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
-mod_group_id=io.github.jmbrands.create-adventuring
+mod_group_id=io.github.jmbrands
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=JonarB21/JMBrands
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=Create: Adventuring adds some features to create to elevate your adventuring.
+
+## Dependency Properties
+create_minecraft_version = 1.20.1
+flywheel_minecraft_version = 1.20.1
+create_version = 0.5.1.f-26
+flywheel_version = 0.6.10-7
+registrate_version = MC1.20-1.3.3
+mc_version = 1.20.1
+jei_version = 15.3.0.1
